# ALlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  allib.pc.in
include/: al.h
src/: al.c
test_client/: CMakeLists.txt  main_test_client.c  tcp_cli_test.c  udp_cli_test.c  unix_cli_test.c
test_server/: CMakeLists.txt  main_test.c  tcp_srv_test.c  udp_srv_test.c  unix_srv_test.c
